# PARMSFCTFPMM

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yaml
parmesan/: .dockerignore  Dockerfile  Makefile  logins.csv  main.py
prolog/: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  diesel.toml
prolog/migrations/000000-create_manual_flag/: up.sql
prolog/migrations/000000-create_manual_flags/: down.sql  up.sql
prolog/migrations/000001-create_team/: up.sql
prolog/migrations/000001-create_teams/: up.sql
prolog/migrations/000002-create_solved_by/: down.sql  up.sql
prolog/migrations/000006-create_picoctf_flag/: down.sql  up.sql
prolog/src/: main.rs  middleware.rs  models.rs
prolog/static/: index.css  index.js  root.css
prolog/templates/: index.hbs
rust/: Dockerfile  Makefile  main.py  requirements.txt  userscript.js
rust/src/: app.pl  handlers.pl
rust/src/templates/layout/body/: body.pl
rust/templates/: index.html
