[package]
name = "prolog"
version = "0.1.0"
edition = "2021"
description = "PARMSFCTFPMM flag submission"
readme = "../README.md"
repository = "https://github.com/ZeusWPI/PARMSFCTFPMM"
publish = false

[profile.release]
opt-level = 3
strip = true
codegen-units = 4

[dependencies]
actix-files = "0.6.2"
actix-web = { version="4.2.1", features=["cookies"] }
diesel = { version="2.0.2", features=["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
futures = "0.3.25"
handlebars = { version="4.3.5", features=["dir_source"] }
reqwest = { version="0.11.12", features=["json"] }
r2d2 = "0.8.10"
serde = { version="1.0.147", features=["derive"] }
serde_json = "1.0.87"
